--- a/packages/hosting/styles/index.css
+++ b/packages/hosting/styles/index.css
@@ -1,48 +1,47 @@
 @tailwind base;
-
-html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background-color: #f9f9f9;
-}
-
-a {
-  color: #d81017;
-}
-
-img {
-  display: inline-block;
-}
-
-/* Start purging... */
 @tailwind components;
-/* Stop purging. */
-
-.section2 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-  border-top: 1px solid #ccc;
-}
-
-.section2:first-child {
-  border-top: none;
-}
-
-.heading2 {
-  font-size: 1.2rem;
-  font-weight: 700;
-}
-
-.thumbnail {
-  width: 192px;
-  height: 108px;
-}
-
-/* Start purging... */
 @tailwind utilities;
-/* Stop purging. */
 
-.columns {
-  columns: 15rem;
+@layer base {
+  html {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    background-color: #f9f9f9;
+  }
+
+  a {
+    color: #d81017;
+  }
+
+  img {
+    display: inline-block;
+  }
+}
+
+@layer utilities {
+  .section2 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+    border-top: 1px solid #ccc;
+  }
+
+  .section2:first-child {
+    border-top: none;
+  }
+
+  .heading2 {
+    font-size: 1.2rem;
+    font-weight: 700;
+  }
+
+  .columns {
+    columns: 15rem;
+  }
+
+  @responsive {
+    .w-thumbnail {
+      width: 192px;
+    }
+  }
 }
